# comex-web-app

./: .gitignore  README.md  app.py  callbacks.py  index.py  layouts.py  pyproject.toml  styles.py
assets/: font.css  styles.css
data/: uf_data.csv
utils/: create_db.py  download_data.py
