[tool.poetry]
name = "comex-web-app"
version = "1.0.0"
description = "Projeto que avalia os conhecimentos técnicos necessários para a vaga \"Desenvolvedor Python - Pessoa Jurídica\" para o Observatório da Indústria - FIEC"
authors = ["Renan Rodrigues dos Santos <renan.engmec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "^1.2.4"
pymongo = {extras = ["tls", "srv"], version = "^3.11.4"}
openpyxl = "^3.0.7"
numpy = "^1.20.3"
dash = "^1.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
